[tool.poetry]
name = "soapnotescribe"
version = "0.1.0"
description = "SOAP Note Scribe is an application that transcribes audio files, analyzes the transcribed text, and generates SOAP notes. The application uses OpenAI's Whisper for transcription and Anthropic's Claude 3.5 for text analysis."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.12.0"
requests = "^2.25.1"
python-dotenv = "^0.17.1"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
